backend/backend-ingress-health.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-backend-ingress
  namespace: todo-app
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-certificate-no: "35351"
    alb.ingress.kubernetes.io/actions.ssl-redirect: |
      {"type":"redirect","redirectConfig":{"protocol":"HTTPS","port":"443","statusCode":"HTTP_301"}}
    alb.ingress.kubernetes.io/healthcheck-path: "/api/health"
    alb.ingress.kubernetes.io/healthcheck-port: "32625"  # NodePort 번호
  labels:
    app: todo-backend
spec:
  ingressClassName: alb
  rules:
    - host: be.wookja.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todo-backend
                port:
                  number: 4000
