backend/backend-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
  namespace: todo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
      - name: todo-backend
        image: public.ecr.aws/c1p3q5l9/todo-be:build-5
        ports:
        - containerPort: 4000

---

apiVersion: v1
kind: Service
metadata:
  name: todo-backend
  namespace: todo-app
spec:
  type: NodePort
  selector:
    app: todo-backend
  ports:
  - port: 4000
    targetPort: 4000
    nodePort: 32625 # NodePort 명시

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-backend-ingress
  namespace: todo-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing # ALB를 인터넷 공개 방식으로 설정
    alb.ingress.kubernetes.io/target-type: ip # 타겟 그룹 타입 설정 (IP 모드)
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:575108924607:certificate/292949d6-2f8e-448e-86e6-e9a10ff59850" # SSL 인증서 ARN
    alb.ingress.kubernetes.io/actions.ssl-redirect: >
      {"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}
    alb.ingress.kubernetes.io/healthcheck-path: "/api/health"
    alb.ingress.kubernetes.io/healthcheck-port: "4000"
    kubernetes.io/ingress.class: alb # Ingress Controller로 ALB 사용
spec:
  rules:
    - host: be.wookja.site
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: todo-backend
              port:
                number: 4000
